--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-SECRET_KEY = 'django-insecure-_your_secret_key'
-API_KEY = "your_key"
+SECRET_KEY = 'django-insecure-_5(pv(@x)&js8o*ox%8rd*4$8+yp0$+js5zwqgt+$w%33kbuq#'
+API_KEY = "0936dae940714b789a2141901220209"
